@@ -1,8 +1,13 @@
 [12.1.0]
-  * Reimplemented rcsslogplayer using Qt4. You can disable the new
-    logplayer with './configure --disable-qt4'. The new logplayer
-	supports qmake build system. If you have trouble with configure
-	script,	please try 'qmake && make'.
+  * Reimplemented rcsslogplayer using Qt4. Please note that Qt 4.3.0
+    or later is required to build the new logplayer. You can disable
+    to build the new logplayer with './configure --disable-qt4'.
+    The new logplayer supports qmake build system. If you have
+    troubles with the configure script on Mac OS X, please try
+    'qmake && make'.
+
+  * The new logplayer supports the standalone mode. Now, rcsslogplayer
+    can replay and show the game logs without rcssmonitor.
 
   * Renamed old logplayer to rcsslogplayer_classic.  You can disable
     the classic logplayer with 'configure --disable-classic'.
